--- a/package.json
+++ b/package.json
@@ -9,7 +9,41 @@
   },
   "dependencies": {
     "next": "9.0.5",
+    "next-fonts": "^0.18.0",
+    "next-transpile-modules": "^2.3.1",
+    "next-optimized-images": "^2.5.3",
+    "@zeit/next-css": "^1.0.1",
+    "react-icons-kit": "^1.3.1",
+    "react-redux": "^7.1.1",
+    "next-compose-plugins": "^2.2.0",
+    "next-apollo": "^3.1.4",
+    "prop-types": "^15.7.2",
+    "react-particles-js": "^2.7.0",
+    "rc-progress": "^2.5.2",
+    "rc-drawer": "^2.0.9",
+    "rc-tabs": "^9.6.6",
+    "next-redux-saga": "^4.0.2",
+    "@ninetynine/next-fonts": "^0.10.2",
+    "react-accessible-accordion": "^3.0.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "@clay.global/react-content-loader": "^1.7.7",
+    "react-image": "^2.2.0",
+    "react-image-gallery": "^0.9.1",
+    "@glidejs/glide": "^3.3.0",
+    "styled-components": "^4.3.2",
+    "styled-system": "^5.1.1",
+    "react-rnd": "^10.0.0",
+    "react-content-loader": "^4.2.2",
     "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "react-dom": "16.9.0",
+    "react-stickynode": "^2.1.1",
+    "@styled-system/theme-get": "^5.1.1"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
+    "docz": "^0.13.7",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^6.0.0",
+    "imagemin-svgo": "^7.0.0"
   }
 }
