--- a/package.json
+++ b/package.json
@@ -8,36 +8,36 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.0.5",
-    "next-fonts": "^0.18.0",
-    "next-transpile-modules": "^2.3.1",
-    "next-optimized-images": "^2.5.3",
-    "@zeit/next-css": "^1.0.1",
-    "react-icons-kit": "^1.3.1",
-    "react-redux": "^7.1.1",
-    "next-compose-plugins": "^2.2.0",
-    "next-apollo": "^3.1.4",
-    "prop-types": "^15.7.2",
-    "react-particles-js": "^2.7.0",
-    "rc-progress": "^2.5.2",
-    "rc-drawer": "^2.0.9",
-    "rc-tabs": "^9.6.6",
-    "next-redux-saga": "^4.0.2",
+    "@clay.global/react-content-loader": "^1.7.7",
+    "@glidejs/glide": "^3.3.0",
     "@ninetynine/next-fonts": "^0.10.2",
+    "@styled-system/theme-get": "^5.1.1",
+    "@zeit/next-css": "^1.0.1",
+    "next": "9.0.5",
+    "next-apollo": "^3.1.4",
+    "next-compose-plugins": "^2.2.0",
+    "next-fonts": "^0.18.0",
+    "next-optimized-images": "^2.5.3",
+    "next-redux-saga": "^4.0.2",
+    "next-transpile-modules": "^2.3.1",
+    "prop-types": "^15.7.2",
+    "rc-drawer": "^2.0.9",
+    "rc-progress": "^2.5.2",
+    "rc-tabs": "^9.6.6",
+    "react": "16.9.0",
     "react-accessible-accordion": "^3.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "@clay.global/react-content-loader": "^1.7.7",
+    "react-content-loader": "^4.2.2",
+    "react-dom": "16.9.0",
+    "react-icons-kit": "^1.3.1",
     "react-image": "^2.2.0",
     "react-image-gallery": "^0.9.1",
-    "@glidejs/glide": "^3.3.0",
-    "styled-components": "^4.3.2",
-    "styled-system": "^5.1.1",
+    "react-particles-js": "^2.7.0",
+    "react-redux": "^7.1.1",
     "react-rnd": "^10.0.0",
-    "react-content-loader": "^4.2.2",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
     "react-stickynode": "^2.1.1",
-    "@styled-system/theme-get": "^5.1.1"
+    "styled-components": "^4.3.2",
+    "styled-system": "^5.1.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.6",
