--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@styled-system/theme-get": "^5.1.1",
     "@zeit/next-css": "^1.0.1",
     "next": "9.0.5",
+    "@redq/reuse-modal": "^1.2.4",
     "next-apollo": "^3.1.4",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^0.18.0",
