--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.1",
     "react-rnd": "^10.0.0",
+    "react-reveal": "^1.2.2",
     "react-scrollspy": "^3.4.0",
     "react-stickynode": "^2.1.1",
     "styled-components": "^4.3.2",
