--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "react-image-gallery": "^0.9.1",
     "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.1",
-    "react-rnd": "^10.0.0",
     "react-reveal": "^1.2.2",
+    "react-rnd": "^10.0.0",
     "react-scrollspy": "^3.4.0",
     "react-stickynode": "^2.1.1",
+    "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.2"
   },
