--- a/package.json
+++ b/package.json
@@ -41,7 +41,12 @@
     "react-scrollspy": "^3.4.0",
     "react-stickynode": "^2.1.1",
     "styled-components": "^4.3.2",
-    "styled-system": "^5.1.2"
+    "styled-system": "^5.1.2",
+    "babel-plugin-styled-components": "^1.10.6",
+    "docz": "^0.13.7",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^6.0.0",
+    "imagemin-svgo": "^7.0.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.6",
