--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^7.1.1",
     "react-reveal": "^1.2.2",
     "react-rnd": "^10.0.0",
+    "react-select": "^3.0.8",
     "react-scrollspy": "^3.4.0",
     "react-stickynode": "^2.1.1",
     "redux-saga": "^1.0.5",
