--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@redq/reuse-modal": "^1.2.4",
     "@styled-system/theme-get": "^5.1.1",
     "@zeit/next-css": "^1.0.1",
+    "babel-plugin-styled-components": "^1.10.6",
+    "docz": "^0.13.7",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^6.0.0",
+    "imagemin-svgo": "^7.0.0",
     "next": "^9.0.5",
     "next-apollo": "^3.1.4",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^0.18.0",
     "next-optimized-images": "^2.5.3",
     "next-redux-saga": "^4.0.2",
+    "next-redux-wrapper": "^4.0.1",
     "next-transpile-modules": "^2.3.1",
     "prop-types": "^15.7.2",
     "rc-drawer": "^2.0.9",
@@ -38,17 +44,12 @@
     "react-redux": "^7.1.1",
     "react-reveal": "^1.2.2",
     "react-rnd": "^10.0.0",
-    "react-select": "^3.0.8",
     "react-scrollspy": "^3.4.0",
+    "react-select": "^3.0.8",
     "react-stickynode": "^2.1.1",
     "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2",
-    "styled-system": "^5.1.2",
-    "babel-plugin-styled-components": "^1.10.6",
-    "docz": "^0.13.7",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-optipng": "^6.0.0",
-    "imagemin-svgo": "^7.0.0"
+    "styled-system": "^5.1.2"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.6",
