--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@zeit/next-css": "^1.0.1",
     "babel-plugin-styled-components": "^1.10.6",
     "docz": "^0.13.7",
+    "es6-promise": "^4.2.8",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
     "imagemin-svgo": "^7.0.0",
@@ -47,15 +48,18 @@
     "react-scrollspy": "^3.4.0",
     "react-select": "^3.0.8",
     "react-stickynode": "^2.1.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.2"
   },
   "devDependencies": {
+    "@types/react": "^16.9.9",
     "babel-plugin-styled-components": "^1.10.6",
     "docz": "^0.13.7",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
-    "imagemin-svgo": "^7.0.0"
+    "imagemin-svgo": "^7.0.0",
+    "typescript": "^3.6.4"
   }
 }
