--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@redq/reuse-modal": "^1.2.4",
     "@styled-system/theme-get": "^5.1.1",
     "@zeit/next-css": "^1.0.1",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-link-http": "^1.5.16",
     "babel-plugin-styled-components": "^1.10.6",
     "docz": "^0.13.7",
     "es6-promise": "^4.2.8",
+    "graphql": "^14.5.8",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
     "imagemin-svgo": "^7.0.0",
@@ -36,6 +39,7 @@
     "react": "^16.9.0",
     "react-accessible-accordion": "^3.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-apollo": "^3.1.3",
     "react-content-loader": "^4.2.2",
     "react-dom": "^16.9.0",
     "react-icons-kit": "^1.3.1",
@@ -55,6 +59,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.9",
+    "apollo-client": "^2.6.4",
     "babel-plugin-styled-components": "^1.10.6",
     "docz": "^0.13.7",
     "imagemin-mozjpeg": "^8.0.0",
