--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
     "styled-system": "^5.1.2"
   },
   "devDependencies": {
+    "@types/node": "^12.12.0",
+    "@types/react": "^16.9.11",
     "babel-plugin-styled-components": "^1.10.6",
     "docz": "^0.13.7",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
-    "imagemin-svgo": "^7.0.0"
+    "imagemin-svgo": "^7.0.0",
+    "typescript": "^3.6.4"
   }
 }
