--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
     "imagemin-svgo": "^7.0.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.5",
     "next-apollo": "^3.1.4",
     "next-compose-plugins": "^2.2.0",
@@ -55,6 +56,7 @@
     "react-scrollspy": "^3.4.0",
     "react-select": "^3.0.8",
     "react-stickynode": "^2.1.1",
+    "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.2"
