--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@ninetynine/next-fonts": "^0.10.2",
     "@redq/reuse-modal": "^1.2.4",
     "@styled-system/theme-get": "^5.1.1",
+    "@types/react-stickynode": "^1.4.0",
+    "@types/styled-components": "^4.1.20",
+    "@types/styled-system": "^5.1.2",
     "@zeit/next-css": "^1.0.1",
     "babel-plugin-styled-components": "^1.10.6",
     "docz": "^0.13.7",
