--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start -p $PORT",
     "heroku-postbuild": "next build",
@@ -26,8 +26,16 @@
     "@types/styled-components": "^4.1.20",
     "@types/styled-system": "^5.1.2",
     "@zeit/next-css": "^1.0.1",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-client-preset": "^1.0.8",
+    "apollo-link-http": "^1.5.16",
     "babel-plugin-styled-components": "^1.10.6",
     "docz": "^0.13.7",
+    "es6-promise": "^4.2.8",
+    "graphql": "^14.5.8",
+    "graphql-anywhere": "^4.2.4",
+    "graphql-tag": "^2.10.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
     "imagemin-svgo": "^7.0.0",
@@ -39,6 +47,7 @@
     "next-optimized-images": "^2.5.3",
     "next-redux-saga": "^4.0.2",
     "next-redux-wrapper": "^4.0.1",
+    "next-routes": "^1.4.2",
     "next-transpile-modules": "^2.3.1",
     "prop-types": "^15.7.2",
     "rc-drawer": "^2.0.9",
@@ -47,6 +56,7 @@
     "react": "^16.9.0",
     "react-accessible-accordion": "^3.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-apollo": "^3.1.3",
     "react-content-loader": "^4.2.2",
     "react-dom": "^16.9.0",
     "react-icons-kit": "^1.3.1",
@@ -60,6 +70,7 @@
     "react-select": "^3.0.8",
     "react-stickynode": "^2.1.1",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.2"
