--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "NODE_ENV=production node server.js -p $PORT",
     "heroku-postbuild": "next build",
     "test": "jest",
     "lint": "eslint ."
@@ -17,6 +17,8 @@
     }
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/preset-flow": "^7.0.0",
     "@clay.global/react-content-loader": "^1.7.7",
     "@glidejs/glide": "^3.3.0",
     "@ninetynine/next-fonts": "^0.10.2",
