--- a/package.json
+++ b/package.json
@@ -17,23 +17,21 @@
     }
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/preset-flow": "^7.0.0",
     "@clay.global/react-content-loader": "^1.7.7",
-    "@glidejs/glide": "^3.3.0",
+    "@glidejs/glide": "^3.4.1",
     "@ninetynine/next-fonts": "^0.10.2",
     "@redq/reuse-modal": "^1.2.4",
     "@styled-system/theme-get": "^5.1.1",
     "@types/react-stickynode": "^1.4.0",
-    "@types/styled-components": "^4.1.20",
-    "@types/styled-system": "^5.1.2",
+    "@types/styled-components": "^4.1.21",
+    "@types/styled-system": "^5.1.3",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-typescript": "1.1.1",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-client-preset": "^1.0.8",
     "apollo-link-http": "^1.5.16",
     "babel-plugin-styled-components": "^1.10.6",
-    "docz": "^0.13.7",
     "es6-promise": "^4.2.8",
     "graphql": "^14.5.8",
     "graphql-anywhere": "^4.2.4",
@@ -42,11 +40,11 @@
     "imagemin-optipng": "^6.0.0",
     "imagemin-svgo": "^7.0.0",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.0.5",
-    "next-apollo": "^3.1.4",
+    "next": "^9.1.2",
+    "next-apollo": "^3.1.6",
     "next-compose-plugins": "^2.2.0",
-    "next-fonts": "^0.18.0",
-    "next-optimized-images": "^2.5.3",
+    "next-fonts": "^0.19.0",
+    "next-optimized-images": "^2.5.4",
     "next-redux-saga": "^4.0.2",
     "next-redux-wrapper": "^4.0.1",
     "next-routes": "^1.4.2",
@@ -55,12 +53,12 @@
     "rc-drawer": "^2.0.9",
     "rc-progress": "^2.5.2",
     "rc-tabs": "^9.6.6",
-    "react": "^16.9.0",
+    "react": "^16.11.0",
     "react-accessible-accordion": "^3.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apollo": "^3.1.3",
     "react-content-loader": "^4.2.2",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.11.0",
     "react-icons-kit": "^1.3.1",
     "react-image": "^2.2.0",
     "react-image-gallery": "^0.9.1",
@@ -73,21 +71,30 @@
     "react-stickynode": "^2.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.5",
-    "styled-components": "^4.3.2",
+    "redux-saga": "^1.1.2",
+    "styled-components": "^4.4.1",
     "styled-system": "^5.1.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.6.0",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-typescript": "^7.7.0",
     "@testing-library/jest-dom": "^4.2.0",
     "@testing-library/react": "^9.3.0",
-    "@types/jest": "^24.0.21",
-    "@types/node": "^12.12.0",
+    "@types/jest": "^24.0.22",
+    "@types/next-redux-saga": "^3.0.1",
+    "@types/node": "^12.12.6",
     "@types/react": "^16.9.11",
+    "@types/react-redux": "^7.1.5",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "docz": "^0.13.7",
+    "docz": "^1.3.2",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
@@ -102,6 +109,6 @@
     "imagemin-svgo": "^7.0.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.2"
   }
 }
