--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "imagemin-optipng": "^6.0.0",
     "imagemin-svgo": "^7.0.0",
     "isomorphic-unfetch": "^3.0.0",
+    "moment": "^2.24.0",
     "next": "^9.1.2",
     "next-apollo": "^3.1.6",
     "next-compose-plugins": "^2.2.0",
@@ -62,8 +63,11 @@
     "react-icons-kit": "^1.3.1",
     "react-image": "^2.2.0",
     "react-image-gallery": "^0.9.1",
+    "react-markdown": "^4.2.2",
+    "react-moment": "^0.9.6",
     "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.1",
+    "react-remarkable": "^1.1.3",
     "react-reveal": "^1.2.2",
     "react-rnd": "^10.0.0",
     "react-scrollspy": "^3.4.0",
