--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "apollo-client-preset": "^1.0.8",
     "apollo-link-http": "^1.5.16",
     "babel-plugin-styled-components": "^1.10.6",
+    "csstype": "^2.6.7",
     "es6-promise": "^4.2.8",
     "graphql": "^14.5.8",
     "graphql-anywhere": "^4.2.4",
@@ -70,6 +71,7 @@
     "react-remarkable": "^1.1.3",
     "react-reveal": "^1.2.2",
     "react-rnd": "^10.0.0",
+    "react-scroll-progress-bar": "^1.1.10",
     "react-scrollspy": "^3.4.0",
     "react-select": "^3.0.8",
     "react-stickynode": "^2.1.1",
