--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-apollo": "^3.1.6",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^0.19.0",
+    "next-ga": "^2.3.4",
     "next-optimized-images": "^2.5.4",
     "next-redux-saga": "^4.0.2",
     "next-redux-wrapper": "^4.0.1",
@@ -61,7 +62,6 @@
     "react-apollo": "^3.1.3",
     "react-content-loader": "^4.2.2",
     "react-dom": "^16.11.0",
-    "react-ga": "^2.7.0",
     "react-icons-kit": "^1.3.1",
     "react-image": "^2.2.0",
     "react-image-gallery": "^0.9.1",
