--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@clay.global/react-content-loader": "^1.7.7",
     "@glidejs/glide": "^3.4.1",
     "@ninetynine/next-fonts": "^0.10.2",
@@ -30,13 +31,16 @@
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-client-preset": "^1.0.8",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "babel-plugin-styled-components": "^1.10.6",
+    "cookie": "^0.4.0",
     "csstype": "^2.6.7",
     "es6-promise": "^4.2.8",
     "graphql": "^14.5.8",
     "graphql-anywhere": "^4.2.4",
     "graphql-tag": "^2.10.1",
+    "https-proxy-agent": "^3.0.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
     "imagemin-svgo": "^7.0.0",
@@ -48,8 +52,6 @@
     "next-fonts": "^0.19.0",
     "next-ga": "^2.3.4",
     "next-optimized-images": "^2.5.4",
-    "next-redux-saga": "^4.0.2",
-    "next-redux-wrapper": "^4.0.1",
     "next-routes": "^1.4.2",
     "next-transpile-modules": "^2.3.1",
     "prop-types": "^15.7.2",
@@ -68,7 +70,6 @@
     "react-markdown": "^4.2.2",
     "react-moment": "^0.9.6",
     "react-particles-js": "^2.7.0",
-    "react-redux": "^7.1.1",
     "react-remarkable": "^1.1.3",
     "react-reveal": "^1.2.2",
     "react-rnd": "^10.0.0",
@@ -76,9 +77,6 @@
     "react-scrollspy": "^3.4.0",
     "react-select": "^3.0.8",
     "react-stickynode": "^2.1.1",
-    "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.2",
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.2"
   },
@@ -94,10 +92,8 @@
     "@testing-library/jest-dom": "^4.2.0",
     "@testing-library/react": "^9.3.0",
     "@types/jest": "^24.0.22",
-    "@types/next-redux-saga": "^3.0.1",
     "@types/node": "^12.12.6",
     "@types/react": "^16.9.11",
-    "@types/react-redux": "^7.1.5",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "babel-plugin-styled-components": "^1.10.6",
