--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-scroll-progress-read": "^0.0.13",
     "react-scrollspy": "^3.4.0",
     "react-select": "^3.0.8",
+    "react-spinners-kit": "^1.9.0",
     "react-stickynode": "^2.1.1",
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.2",
