--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "apollo-link-http": "^1.5.16",
     "babel-plugin-styled-components": "^1.10.6",
     "body-parser": "^1.19.0",
+    "commitizen": "^4.0.3",
     "cookie": "^0.4.0",
     "csstype": "^2.6.7",
     "es6-promise": "^4.2.8",
